# dify-workflow-generator

./: .dockerignore  .gitignore  ACHIEVEMENTS.md  AGENT_TEAMS.md  AGENT_TEAMS_SETUP.md  Dockerfile  LICENSE  README.md  agent_teams_example.py  agent_teams_fallback.py  ai_data_analysis.yml  cli_workflow_generator.py  docker-compose.yml  mkdocs.yml  my_workflow.yml  pyproject.toml  test_zh.py  translation_docs.md  translation_workflow.yml  workflow_generator.yml  workflow_generator_agent_teams.yml  workflow_generator_readme.md
.github/workflows/: ci.yml  docs.yml  release.yml
dify_workflow/: __init__.py  agent_teams.py  auth.py  batch.py  builder.py  cli.py  collaboration.py  completion.py  config.py  constants.py  database.py  debugger.py  decorators.py  docs.py  exceptions.py  executor.py  git_integration.py  importer.py  interactive.py  logging_config.py  marketplace.py  migration.py  nodes.py  optimizer.py  plugins.py  profiler.py  templates.py  testing.py  utils.py  workflow.py
docs/: index.md
docs/getting-started/: installation.md  quickstart.md
examples/: ai_data_analysis.py  create_workflows.py  translator.py
tests/: test_builder.py  test_exceptions.py  test_features.py  test_interactive.py  test_utils.py  test_web.py  test_workflow.py
vscode-extension/: package.json
vscode-extension/snippets/: dify.json
vscode-extension/src/: extension.ts  preview.ts
web/: app.py
web/static/: index.html
