[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dify-workflow-generator"
version = "0.3.0"
description = "Programmatically generate Dify-compatible workflow DSL files"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Rrocean"}
]
keywords = ["dify", "workflow", "ai", "llm", "automation", "dsl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
interactive = [
    "openai>=1.0",
]

[project.scripts]
dify-workflow = "dify_workflow.cli:main"

[project.urls]
Homepage = "https://github.com/Rrocean/dify-workflow-generator"
Repository = "https://github.com/Rrocean/dify-workflow-generator"
Issues = "https://github.com/Rrocean/dify-workflow-generator/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["dify_workflow*"]
